fixed header on mobile screens

--- a/styles.scss
+++ b/styles.scss
@@ -1028,6 +1028,7 @@ body {
       .feature__box {
         width: 100%;
         margin-bottom: 50px;
+        min-height: 100vh;
 
         h1 {
           font-size: 1.7rem;
